# CereStimWrapper

./: .gitignore  CMakeLists.txt  README.md  cerestim.i  setup.py
cerestim/: __init__.py  cerestim.i
tests/: api_example.py
